c4/wrappers/enet/enet.nim


proc enet_socket_create*(a2: ENetSocketType): ENetSocket {.cdecl,
    importc: "enet_socket_create", dynlib: lib.}
proc enet_socket_bind*(a2: ENetSocket; a3: ptr ENetAddress): cint {.cdecl,
    importc: "enet_socket_bind", dynlib: lib.}
proc enet_socket_get_address*(a2: ENetSocket; a3: ptr ENetAddress): cint {.cdecl,
    importc: "enet_socket_get_address", dynlib: lib.}
proc enet_socket_listen*(a2: ENetSocket; a3: cint): cint {.cdecl,
    importc: "enet_socket_listen", dynlib: lib.}
proc enet_socket_accept*(a2: ENetSocket; a3: ptr ENetAddress): ENetSocket {.cdecl,
    importc: "enet_socket_accept", dynlib: lib.}
proc enet_socket_connect*(a2: ENetSocket; a3: ptr ENetAddress): cint {.cdecl,
    importc: "enet_socket_connect", dynlib: lib.}
proc enet_socket_send*(a2: ENetSocket; a3: ptr ENetAddress; a4: ptr ENetBuffer; a5: csize): cint {.
    cdecl, importc: "enet_socket_send", dynlib: lib.}
proc enet_socket_receive*(a2: ENetSocket; a3: ptr ENetAddress; a4: ptr ENetBuffer;
                         a5: csize): cint {.cdecl, importc: "enet_socket_receive",
    dynlib: lib.}
proc enet_socket_wait*(a2: ENetSocket; a3: ptr enet_uint32; a4: enet_uint32): cint {.
    cdecl, importc: "enet_socket_wait", dynlib: lib.}
proc enet_socket_set_option*(a2: ENetSocket; a3: ENetSocketOption; a4: cint): cint {.
    cdecl, importc: "enet_socket_set_option", dynlib: lib.}
proc enet_socket_get_option*(a2: ENetSocket; a3: ENetSocketOption; a4: ptr cint): cint {.
    cdecl, importc: "enet_socket_get_option", dynlib: lib.}
proc enet_socket_shutdown*(a2: ENetSocket; a3: ENetSocketShutdown): cint {.cdecl,
    importc: "enet_socket_shutdown", dynlib: lib.}
proc enet_socket_destroy*(a2: ENetSocket) {.cdecl, importc: "enet_socket_destroy",
    dynlib: lib.}
proc enet_socketset_select*(a2: ENetSocket; a3: ptr ENetSocketSet;
                           a4: ptr ENetSocketSet; a5: enet_uint32): cint {.cdecl,
    importc: "enet_socketset_select", dynlib: lib.}

proc enet_address_set_host*(address: ptr ENetAddress; hostName: cstring): cint {.cdecl,
    importc: "enet_address_set_host", dynlib: lib.}

proc enet_address_get_host_ip*(address: ptr ENetAddress; hostName: cstring;
                              nameLength: csize): cint {.cdecl,
    importc: "enet_address_get_host_ip", dynlib: lib.}

proc enet_address_get_host*(address: ptr ENetAddress; hostName: cstring;
                           nameLength: csize): cint {.cdecl,
    importc: "enet_address_get_host", dynlib: lib.}

proc enet_packet_create*(a2: pointer; a3: csize; a4: enet_uint32): ptr ENetPacket {.
    cdecl, importc: "enet_packet_create", dynlib: lib.}
proc enet_packet_destroy*(a2: ptr ENetPacket) {.cdecl,
    importc: "enet_packet_destroy", dynlib: lib.}
proc enet_packet_resize*(a2: ptr ENetPacket; a3: csize): cint {.cdecl,
    importc: "enet_packet_resize", dynlib: lib.}
proc enet_crc32*(a2: ptr ENetBuffer; a3: csize): enet_uint32 {.cdecl,
    importc: "enet_crc32", dynlib: lib.}
proc enet_host_create*(a2: ptr ENetAddress; a3: csize; a4: csize; a5: enet_uint32;
                      a6: enet_uint32): ptr ENetHost {.cdecl,
    importc: "enet_host_create", dynlib: lib.}
proc enet_host_destroy*(a2: ptr ENetHost) {.cdecl, importc: "enet_host_destroy",
                                        dynlib: lib.}
proc enet_host_connect*(a2: ptr ENetHost; a3: ptr ENetAddress; a4: csize; a5: enet_uint32): ptr ENetPeer {.
    cdecl, importc: "enet_host_connect", dynlib: lib.}
proc enet_host_check_events*(a2: ptr ENetHost; a3: ptr ENetEvent): cint {.cdecl,
    importc: "enet_host_check_events", dynlib: lib.}
proc enet_host_service*(a2: ptr ENetHost; a3: ptr ENetEvent; a4: enet_uint32): cint {.
    cdecl, importc: "enet_host_service", dynlib: lib.}
proc enet_host_flush*(a2: ptr ENetHost) {.cdecl, importc: "enet_host_flush",
                                      dynlib: lib.}
proc enet_host_broadcast*(a2: ptr ENetHost; a3: enet_uint8; a4: ptr ENetPacket) {.cdecl,
    importc: "enet_host_broadcast", dynlib: lib.}
proc enet_host_compress*(a2: ptr ENetHost; a3: ptr ENetCompressor) {.cdecl,
    importc: "enet_host_compress", dynlib: lib.}
proc enet_host_compress_with_range_coder*(host: ptr ENetHost): cint {.cdecl,
    importc: "enet_host_compress_with_range_coder", dynlib: lib.}
proc enet_host_channel_limit*(a2: ptr ENetHost; a3: csize) {.cdecl,
    importc: "enet_host_channel_limit", dynlib: lib.}
proc enet_host_bandwidth_limit*(a2: ptr ENetHost; a3: enet_uint32; a4: enet_uint32) {.
    cdecl, importc: "enet_host_bandwidth_limit", dynlib: lib.}
proc enet_host_bandwidth_throttle*(a2: ptr ENetHost) {.cdecl,
    importc: "enet_host_bandwidth_throttle", dynlib: lib.}
proc enet_host_random_seed*(): enet_uint32 {.cdecl,
    importc: "enet_host_random_seed", dynlib: lib.}
proc enet_peer_send*(a2: ptr ENetPeer; a3: enet_uint8; a4: ptr ENetPacket): cint {.cdecl,
    importc: "enet_peer_send", dynlib: lib.}
proc enet_peer_receive*(a2: ptr ENetPeer; channelID: ptr enet_uint8): ptr ENetPacket {.
    cdecl, importc: "enet_peer_receive", dynlib: lib.}
proc enet_peer_ping*(a2: ptr ENetPeer) {.cdecl, importc: "enet_peer_ping", dynlib: lib.}
proc enet_peer_ping_interval*(a2: ptr ENetPeer; a3: enet_uint32) {.cdecl,
    importc: "enet_peer_ping_interval", dynlib: lib.}
proc enet_peer_timeout*(a2: ptr ENetPeer; a3: enet_uint32; a4: enet_uint32;
                       a5: enet_uint32) {.cdecl, importc: "enet_peer_timeout",
                                        dynlib: lib.}
proc enet_peer_reset*(a2: ptr ENetPeer) {.cdecl, importc: "enet_peer_reset",
                                      dynlib: lib.}
proc enet_peer_disconnect*(a2: ptr ENetPeer; a3: enet_uint32) {.cdecl,
    importc: "enet_peer_disconnect", dynlib: lib.}
proc enet_peer_disconnect_now*(a2: ptr ENetPeer; a3: enet_uint32) {.cdecl,
    importc: "enet_peer_disconnect_now", dynlib: lib.}
proc enet_peer_disconnect_later*(a2: ptr ENetPeer; a3: enet_uint32) {.cdecl,
    importc: "enet_peer_disconnect_later", dynlib: lib.}
proc enet_peer_throttle_configure*(a2: ptr ENetPeer; a3: enet_uint32; a4: enet_uint32;
                                  a5: enet_uint32) {.cdecl,
    importc: "enet_peer_throttle_configure", dynlib: lib.}
proc enet_peer_throttle*(a2: ptr ENetPeer; a3: enet_uint32): cint {.cdecl,
    importc: "enet_peer_throttle", dynlib: lib.}
proc enet_peer_reset_queues*(a2: ptr ENetPeer) {.cdecl,
    importc: "enet_peer_reset_queues", dynlib: lib.}
proc enet_peer_setup_outgoing_command*(a2: ptr ENetPeer; a3: ptr ENetOutgoingCommand) {.
    cdecl, importc: "enet_peer_setup_outgoing_command", dynlib: lib.}
proc enet_peer_queue_outgoing_command*(a2: ptr ENetPeer; a3: ptr ENetProtocol;
                                      a4: ptr ENetPacket; a5: enet_uint32;
                                      a6: enet_uint16): ptr ENetOutgoingCommand {.
    cdecl, importc: "enet_peer_queue_outgoing_command", dynlib: lib.}
proc enet_peer_queue_incoming_command*(a2: ptr ENetPeer; a3: ptr ENetProtocol;
                                      a4: pointer; a5: csize; a6: enet_uint32;
                                      a7: enet_uint32): ptr ENetIncomingCommand {.
    cdecl, importc: "enet_peer_queue_incoming_command", dynlib: lib.}
proc enet_peer_queue_acknowledgement*(a2: ptr ENetPeer; a3: ptr ENetProtocol;
                                     a4: enet_uint16): ptr ENetAcknowledgement {.
    cdecl, importc: "enet_peer_queue_acknowledgement", dynlib: lib.}
proc enet_peer_dispatch_incoming_unreliable_commands*(a2: ptr ENetPeer;
    a3: ptr ENetChannel) {.cdecl, importc: "enet_peer_dispatch_incoming_unreliable_commands",
                        dynlib: lib.}
proc enet_peer_dispatch_incoming_reliable_commands*(a2: ptr ENetPeer;
    a3: ptr ENetChannel) {.cdecl, importc: "enet_peer_dispatch_incoming_reliable_commands",
                        dynlib: lib.}
proc enet_peer_on_connect*(a2: ptr ENetPeer) {.cdecl,
    importc: "enet_peer_on_connect", dynlib: lib.}
proc enet_peer_on_disconnect*(a2: ptr ENetPeer) {.cdecl,
    importc: "enet_peer_on_disconnect", dynlib: lib.}
proc enet_range_coder_create*(): pointer {.cdecl,
                                        importc: "enet_range_coder_create",
                                        dynlib: lib.}
proc enet_range_coder_destroy*(a2: pointer) {.cdecl,
    importc: "enet_range_coder_destroy", dynlib: lib.}
proc enet_range_coder_compress*(a2: pointer; a3: ptr ENetBuffer; a4: csize; a5: csize;
                               a6: ptr enet_uint8; a7: csize): csize {.cdecl,
    importc: "enet_range_coder_compress", dynlib: lib.}
proc enet_range_coder_decompress*(a2: pointer; a3: ptr enet_uint8; a4: csize;
                                 a5: ptr enet_uint8; a6: csize): csize {.cdecl,
    importc: "enet_range_coder_decompress", dynlib: lib.}
proc enet_protocol_command_size*(a2: enet_uint8): csize {.cdecl,
    importc: "enet_protocol_command_size", dynlib: lib.}